Remove Github call-to-action

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648723801c20dfbb10a9db9d" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="65a683dc387d6f72ded606e3" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Tutustu hinnastoomme! - Nords Oy</title>
@@ -88,9 +88,6 @@
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-              <div class="social-circle dribble"></div>
-            </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
             <p class="top-text _2">Tampere, Finland</p>
@@ -101,12 +98,12 @@
     <section class="hero inner">
       <div class="container">
         <div class="hero-grid">
-          <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f9814b-10a9db9d" class="part-2">
+          <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f9814b-ded606e3" class="part-2">
             <div class="hero-flex-center _1 no-padding">
               <h1 class="hero-display _1 hinnasto">Hinnasto</h1>
             </div>
           </div>
-          <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f98152-10a9db9d" class="part-1">
+          <div id="w-node-_62d2a689-3014-4d03-e5fd-5a2792f98152-ded606e3" class="part-1">
             <div class="hero-flex-center left">
               <p style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);opacity:0" class="paragraph-1 second">Autamme mielellämme mahtavia asiakkaitamme heidän upeissa projekteissaan.<br></p>
               <div class="margin-40px">
@@ -131,7 +128,7 @@
             <div id="w-node-_15c45ca9-e70f-feb7-edf2-c68d38fe80ed-38fe80eb" class="card-container">
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
-              </a><img src="images/simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
+              </a><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390b58b5c0b4ab5a5c7623c_simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
               <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
@@ -163,7 +160,7 @@
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/kotisivu.svg" loading="lazy" alt="Harmaa ikoni, jossa tekstiä ja NDM selaimen sisällä." class="pricing-image">
               </a>
-              <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="images/all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
+              <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
               <div class="pricing-title no-margin">€ 399.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
@@ -197,7 +194,7 @@
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/logosivut.svg" loading="lazy" alt="" class="pricing-image">
               </a>
-              <h3 class="pricing-type">Logo + kotisivut</h3><img src="images/all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
+              <h3 class="pricing-type">Logo + kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
               <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
@@ -350,9 +347,6 @@
                   </a>
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
-                  </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-                    <div class="social-circle dribble"></div>
                   </a>
                 </div>
               </div>
