--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="65a683dc387d6f72ded6061f" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Avaimet käteen periaatteella huippu brändi - Nords Oy</title>
@@ -88,9 +88,6 @@
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-              <div class="social-circle dribble"></div>
-            </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
             <p class="top-text _2">Tampere, Finland</p>
@@ -101,7 +98,7 @@
     <section id="Top" class="hero">
       <div class="container">
         <div class="hero-grid">
-          <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f6e-cc037ca2" class="part-2">
+          <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f6e-ded6061f" class="part-2">
             <div class="hero-flex-center">
               <h1 class="hero-display _1 home">Visioi.</h1>
             </div>
@@ -112,7 +109,7 @@
               <h2 class="hero-display _3 home">Saavuta.</h2>
             </div>
           </div>
-          <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f78-cc037ca2" class="part-1">
+          <div id="w-node-_245e4a3d-ff17-6578-ba65-730586e95f78-ded6061f" class="part-1">
             <div class="hero-flex-center left">
               <p style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);opacity:0" class="paragraph-1 second">Nords Oy on suomalainen brändäys- ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.<br><br>Asiakkaamme toiminnan laajuudesta riippumatta säilytämme korkeat standardimme parhaan lopputuloksen luomista varten.<br></p>
               <div class="margin-40px">
@@ -133,7 +130,7 @@
     <section id="Scroll" class="section">
       <div class="container">
         <div data-w-id="1f24fd44-1907-0ccf-4539-372782965c36" style="opacity:0" class="max-w-width">
-          <h2 class="display-3">Olemme palvelleet jo yli 250 upeaa yritystä</h2>
+          <h2 class="display-3">Olemme palvelleet jo yli 300 upeaa yritystä</h2>
           <div class="margin-30px">
             <a href="referenssit" class="button-line _2 w-inline-block">
               <div>
@@ -151,7 +148,7 @@
         <div class="margin-150px">
           <div>
             <div class="photo-center">
-              <div id="w-node-f55d7c4a-0788-b43c-9134-589c4cbae949-cc037ca2" class="right-part">
+              <div id="w-node-f55d7c4a-0788-b43c-9134-589c4cbae949-ded6061f" class="right-part">
                 <p data-w-id="f55d7c4a-0788-b43c-9134-589c4cbae94a" style="opacity:0" class="paragraph-1">Yrityksemme koostuu innovatiivisista suunnittelijoista ja pikselitäydellisistä kehittäjistä.<br><br>Tavoitteenamme on antaa sinulle avaimet käteen periaatteella ainutlaatuinen ja kilpailukykyinen brändi.</p>
                 <div class="margin-device">
                   <a href="#" data-w-id="f55d7c4a-0788-b43c-9134-589c4cbae94d" style="opacity:0" class="lightbox-link w-inline-block w-lightbox"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/63172afabaf3d9640b2e3b00_play.png" loading="lazy" alt="Pyörivä kuva, jossa lukee &quot;play showreel&quot;" class="rotate-image"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631723c1b243a03a99a986d4_black-ico.png" loading="lazy" alt="Toista ikoni" class="play-icon">
@@ -242,7 +239,7 @@
             <div id="w-node-_15c45ca9-e70f-feb7-edf2-c68d38fe80ed-38fe80eb" class="card-container">
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/logot.svg" loading="lazy" alt="Harmaa ikoni, jossa kirjaimet NDM selaimen sisällä." class="pricing-image">
-              </a><img src="images/simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
+              </a><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390b58b5c0b4ab5a5c7623c_simple_logo_icon-cropped.svg" loading="lazy" alt="" class="service-title">
               <h3 class="pricing-type">Logon suunnittelu</h3>
               <div class="pricing-title no-margin">€ 149.00 <span class="alv">+ alv. 24%<br></span></div>
               <div class="pricing-features">
@@ -274,7 +271,7 @@
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/kotisivu.svg" loading="lazy" alt="Harmaa ikoni, jossa tekstiä ja NDM selaimen sisällä." class="pricing-image">
               </a>
-              <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="images/all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
+              <h3 class="pricing-type">Kotisivujen kehitys</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb6499e2d11391d1ec82_all_in_icon-cropped.svg" loading="lazy" alt="" class="service-title fixed">
               <div class="pricing-title no-margin">€ 399.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
@@ -308,7 +305,7 @@
               <a href="#" class="pricing-icon services w-inline-block">
                 <div class="pricing-circle"></div><img src="images/logosivut.svg" loading="lazy" alt="" class="pricing-image">
               </a>
-              <h3 class="pricing-type">Logo + kotisivut</h3><img src="images/all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
+              <h3 class="pricing-type">Logo + kotisivut</h3><img src="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/6390bb2281ed7f01a39de227_all_in_logo-cropped.svg" loading="lazy" alt="" class="service-title">
               <div class="pricing-title no-margin">€ 499.00 <span class="alv">+ alv. 24%</span></div>
               <div class="pricing-features">
                 <div class="pricing-feature"><img src="images/checkmark.svg" loading="lazy" alt="Harmaa valintamerkki." class="check-mark">
@@ -508,12 +505,12 @@
         </div>
         <div class="margin-200px hide">
           <div class="grid-2-columns">
-            <div id="w-node-_0a65e191-bd04-18bd-b7d0-783abfc64d09-cc037ca2">
+            <div id="w-node-_0a65e191-bd04-18bd-b7d0-783abfc64d09-ded6061f">
               <div class="photo-animation-main"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6317511da3f8cf2ff69330b3_photo-3.jpg" loading="lazy" alt="Kuva yrityksemme tiimistä pöydän ympärillä" class="photo">
                 <div class="absolute-background normal"></div>
               </div>
             </div>
-            <div id="w-node-_29cab120-8cf9-4e10-9079-d2a263fb6c8e-cc037ca2">
+            <div id="w-node-_29cab120-8cf9-4e10-9079-d2a263fb6c8e-ded6061f">
               <div class="max-width _4 vertical">
                 <h3 data-w-id="1cefba3a-d2cf-90c0-a140-48bea908c818" style="opacity:0" class="display-3">Tietoa meistä</h3>
                 <div class="margin-20px">
@@ -527,16 +524,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="section source-code">
-      <div class="w-layout-blockcontainer container w-container">
-        <div class="source-code-wrap">
-          <a href="https://github.com/nordsoy" target="_blank" class="github-wrap w-inline-block"><img src="images/github-blue.svg" loading="lazy" alt="Sininen Github logo." class="github-icon">
-            <div class="github-text-block">@nordsoy</div>
-          </a>
-          <h3 class="display-4 text-centered">Tutustu näiden sivujen lähdekoodiin klikkaamalla <a href="https://github.com/nordsoy/nords.fi" target="_blank">tästä</a> – avaa ovi digitaaliseen maailmaan, ja kurkista sivustojen taustalle!</h3>
         </div>
       </div>
     </section>
@@ -557,8 +544,8 @@
         </div>
         <div class="margin-70px">
           <div class="w-layout-grid client-grid">
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-cc037ca2" class="client-card">
-              <a href="referenssi/hautaustoimisto-rauha-oy" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus.webp 500w, images/mockup-rauhanhautaus.webp 800w, images/mockup-rauhanhautaus.webp 1080w, images/mockup-rauhanhautaus.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-ded6061f" class="client-card">
+              <a href="referenssi/hautaustoimisto-rauha-oy" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
                   <a href="#" class="category-tag">11/2023</a>
@@ -576,7 +563,7 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-cc037ca2" class="client-card">
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
               <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
@@ -650,9 +637,6 @@
                   </a>
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
-                  </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-                    <div class="social-circle dribble"></div>
                   </a>
                 </div>
               </div>
