--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="65a683dc387d6f72ded60721" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Ota yhteyttä - Nords Oy</title>
@@ -88,9 +88,6 @@
             <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-              <div class="social-circle dribble"></div>
-            </a>
           </div>
           <div class="location-wrapper"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afca597a6f8_gps_fixed_white_24dp.svg" loading="lazy" width="14" alt="" class="location">
             <p class="top-text _2">Tampere, Finland</p>
@@ -101,12 +98,12 @@
     <section class="hero inner">
       <div class="container">
         <div class="hero-grid">
-          <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458fed-6f037d22" class="part-2">
+          <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458fed-ded60721" class="part-2">
             <div class="hero-flex-center _1 no-padding">
               <h1 class="hero-display _1 left-align contact">Ota yhteyttä</h1>
             </div>
           </div>
-          <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458ff1-6f037d22" class="part-1">
+          <div id="w-node-_2a18959f-0d4a-7671-4695-e1c236458ff1-ded60721" class="part-1">
             <div class="hero-flex-center left">
               <p style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(-20deg, 0);opacity:0" class="paragraph-1 second">Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen kautta. Odotamme innolla yhteydenottoasi!<br></p>
               <div class="margin-40px">
@@ -128,23 +125,23 @@
       <div class="container">
         <div>
           <div data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1da" style="opacity:0" class="contact-grid">
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1db-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1db" style="opacity:0" class="contact-detail-wrap"><img src="images/phone.svg" loading="lazy" alt="Puhelin" class="contact-icon">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1db-ded60721" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1db" style="opacity:0" class="contact-detail-wrap"><img src="images/phone.svg" loading="lazy" alt="Puhelin" class="contact-icon">
               <h1 class="footer-title big">Puhelinnumero</h1>
               <p>Soita meille numeroon <a href="tel:+358449819623">044 981 9623</a> arkisin ma-pe (08:00 - 16:00).</p>
             </div>
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1e8-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1e8" style="opacity:0" class="contact-detail-wrap"><img src="images/mail.svg" loading="lazy" alt="Sähköposti" class="contact-icon">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1e8-ded60721" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1e8" style="opacity:0" class="contact-detail-wrap"><img src="images/mail.svg" loading="lazy" alt="Sähköposti" class="contact-icon">
               <h1 class="footer-title big">Sähköpostiosoite</h1>
               <p>Jos haluat ottaa yhteyttä sähköpostitse, lähetä viesti osoitteeseen <a href="mailto:eeli@nords.fi">eeli@nords.fi.</a>
               </p>
             </div>
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp" class="contact-icon small">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-ded60721" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp" class="contact-icon small">
               <h1 class="footer-title big">WhatsApp</h1>
               <p>Voit myös lähettää meille viestiä WhatsApissa numeroon <a href="http://wa.me/358449819623" target="_blank">044 981 9623</a>!</p>
             </div>
           </div>
           <div class="margin-60px">
             <div class="w-form">
-              <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="form-grid" data-wf-page-id="63949a6eea7b3a1e6f037d22" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input type="text" class="text-field-contact w-input" maxlength="256" name="nimi" data-name="nimi" placeholder="Nimi*" id="nimi-2" required=""><input type="text" class="text-field-contact w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="Yrityksen nimi" id="yritys"><input type="email" class="text-field-contact w-input" maxlength="256" name="sposti" data-name="sposti" placeholder="Sähköposti*" id="sposti" required=""><input type="tel" class="text-field-contact w-input" maxlength="256" name="puhelinnumero" data-name="puhelinnumero" placeholder="Puhelinnumero" id="puhelinnumero-2"><select id="kuinka-sait-tietaa-meista" name="kuinka-sait-tietaa-meista" data-name="kuinka-sait-tietaa-meista" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-6f037d22 w-select">
+              <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0" data-w-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="form-grid" data-wf-page-id="65a683dc387d6f72ded60721" data-wf-element-id="51c6a1d4-fbba-2aa4-a028-732a5a9c2288"><input class="text-field-contact w-input" maxlength="256" name="nimi" data-name="nimi" placeholder="Nimi*" type="text" id="nimi-2" required=""><input class="text-field-contact w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="Yrityksen nimi" type="text" id="yritys"><input class="text-field-contact w-input" maxlength="256" name="sposti" data-name="sposti" placeholder="Sähköposti*" type="email" id="sposti" required=""><input class="text-field-contact w-input" maxlength="256" name="puhelinnumero" data-name="puhelinnumero" placeholder="Puhelinnumero" type="tel" id="puhelinnumero-2"><select id="kuinka-sait-tietaa-meista" name="kuinka-sait-tietaa-meista" data-name="kuinka-sait-tietaa-meista" class="select-field w-node-_15d6b544-3973-d893-e977-3880fb84d369-ded60721 w-select">
                   <option value="">Kuinka sait tietää meistä</option>
                   <option value="Googlen hakutuloksista">Googlen hakutuloksista</option>
                   <option value="Suositus ystävältä">Suositus ystävältä</option>
@@ -152,7 +149,7 @@
                   <option value="Sosiaalisen median kautta">Sosiaalisen median kautta</option>
                   <option value="Olimme teihin yhteydessä">Olimme teihin yhteydessä</option>
                 </select><textarea id="viesti-2" name="viesti" maxlength="5000" data-name="viesti" placeholder="Viesti*" required="" class="text-field-contact area w-input"></textarea>
-                <div><input type="submit" value="Lähetä" data-wait="Odota hetki..." class="button full w-button">
+                <div><input type="submit" data-wait="Odota hetki..." class="button full w-button" value="Lähetä">
                   <div class="security-field">
                     <div class="security-icon w-embed"><svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path d="m22.814 9.216-.826-5.368A1 1 0 0 0 21 3C15.533 3 12.731.316 12.707.293a1 1 0 0 0-1.41 0C11.269.316 8.467 3 3 3a1 1 0 0 0-.988.848l-.826 5.368A12.033 12.033 0 0 0 7.3 21.576l4.22 2.3a1 1 0 0 0 .958 0l4.22-2.3a12.033 12.033 0 0 0 6.116-12.36Zm-7.072 10.6L12 21.861 8.258 19.82a10.029 10.029 0 0 1-5.1-10.3l.7-4.541A14.717 14.717 0 0 0 12 2.3a14.717 14.717 0 0 0 8.139 2.68l.7 4.54a10.029 10.029 0 0 1-5.097 10.3Z" fill="#000000" class="fill-232323"></path>
@@ -224,9 +221,6 @@
                   </a>
                   <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
-                  </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
-                    <div class="social-circle dribble"></div>
                   </a>
                 </div>
               </div>
