--- a/palaute.html
+++ b/palaute.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3aa41e037d70" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="65a683dc387d6f72ded60735" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Anna palautetta - Nords Oy</title>
@@ -32,7 +32,7 @@
   <div id="Top" class="page-content">
     <div class="navigation-wrapper feedback">
       <div class="container">
-        <div class="navigation-grid center"><img src="images/ndm-cropped.png" loading="lazy" id="w-node-_10a00774-66ed-66e1-8858-a5eae0aa0d2c-1e037d70" sizes="(max-width: 479px) 100vw, 300px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="nords-feedback"></div>
+        <div class="navigation-grid center"><img src="images/ndm-cropped.png" loading="lazy" id="w-node-_10a00774-66ed-66e1-8858-a5eae0aa0d2c-ded60735" sizes="(max-width: 479px) 100vw, 300px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="nords-feedback"></div>
       </div>
     </div>
     <div class="section feedback">
@@ -43,48 +43,48 @@
             <div class="paragraph-1 paragraph-gray top-margin">Arvostamme suuresti palautettasi ja haluamme tietää, miten olemme onnistuneet palvellessamme sinua. Asiakkaan tyytyväisyys on meille yksi tärkeimmistä tavoitteista, ja siksi haluamme kuulla, mitä mieltä olet kokemuksestasi.</div>
           </div>
           <div class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" action="https://airform.io/joose@nords.fi" method="post" data-wf-page-id="63949a6eea7b3aa41e037d70" data-wf-element-id="1d875b11-be0a-beb5-a8c7-4ca84eaaa359">
+            <form id="email-form" name="email-form" data-name="Email Form" action="https://airform.io/joose@nords.fi" method="post" data-wf-page-id="65a683dc387d6f72ded60735" data-wf-element-id="1d875b11-be0a-beb5-a8c7-4ca84eaaa359">
               <div class="form-section-wrap">
                 <div class="display-4">Kuinka onnistuimme?</div>
                 <div class="form-row-wrap"><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Erinomaisesti</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="erinomaisesti" name="erinomaisesti" data-name="erinomaisesti" style="opacity:0;position:absolute;z-index:-1"><span for="erinomaisesti" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="erinomaisesti" type="checkbox" name="erinomaisesti" data-name="erinomaisesti" style="opacity:0;position:absolute;z-index:-1"><span for="erinomaisesti" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Oikein hyvin</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="oikein-hyvin" name="oikein-hyvin" data-name="oikein hyvin" style="opacity:0;position:absolute;z-index:-1"><span for="oikein-hyvin" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="oikein-hyvin" type="checkbox" name="oikein-hyvin" data-name="oikein hyvin" style="opacity:0;position:absolute;z-index:-1"><span for="oikein-hyvin" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Hyvin</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="hyvin" name="hyvin" data-name="hyvin" style="opacity:0;position:absolute;z-index:-1"><span for="hyvin" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="hyvin" type="checkbox" name="hyvin" data-name="hyvin" style="opacity:0;position:absolute;z-index:-1"><span for="hyvin" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Tyydyttävästi</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="tyydyttavasti" name="tyydyttavasti" data-name="tyydyttavasti" style="opacity:0;position:absolute;z-index:-1"><span for="tyydyttavasti" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="tyydyttavasti" type="checkbox" name="tyydyttavasti" data-name="tyydyttavasti" style="opacity:0;position:absolute;z-index:-1"><span for="tyydyttavasti" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Huonosti</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="huonosti" name="huonosti" data-name="huonosti" style="opacity:0;position:absolute;z-index:-1"><span for="huonosti" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="huonosti" type="checkbox" name="huonosti" data-name="huonosti" style="opacity:0;position:absolute;z-index:-1"><span for="huonosti" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Välttävästi</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="valttavasti" name="valttavasti" data-name="valttavasti" style="opacity:0;position:absolute;z-index:-1"><span for="valttavasti" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="valttavasti" type="checkbox" name="valttavasti" data-name="valttavasti" style="opacity:0;position:absolute;z-index:-1"><span for="valttavasti" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label></div>
               </div>
               <div class="form-section-wrap">
                 <div class="display-4">Suosittelisitko palveluitamme?</div>
                 <div class="form-row-wrap"><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Kyllä</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="kylla" name="kylla" data-name="kylla" style="opacity:0;position:absolute;z-index:-1"><span for="kylla" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="kylla" type="checkbox" name="kylla" data-name="kylla" style="opacity:0;position:absolute;z-index:-1"><span for="kylla" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">Ehkä</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="ehka" name="ehka" data-name="ehka" style="opacity:0;position:absolute;z-index:-1"><span for="ehka" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="ehka" type="checkbox" name="ehka" data-name="ehka" style="opacity:0;position:absolute;z-index:-1"><span for="ehka" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label><label class="w-checkbox checkbox-field">
                     <p class="paragraph-0-margin">En</p>
-                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input type="checkbox" id="en" name="en" data-name="en" style="opacity:0;position:absolute;z-index:-1"><span for="en" class="checkbox-label-2 w-form-label">Brand Identity</span>
+                    <div class="w-checkbox-input w-checkbox-input--inputType-custom checkbox-2"></div><input id="en" type="checkbox" name="en" data-name="en" style="opacity:0;position:absolute;z-index:-1"><span for="en" class="checkbox-label-2 w-form-label">Brand Identity</span>
                   </label></div>
               </div>
               <div class="personal-details">
-                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa393-1e037d70" class="grid-cell"><label for="yritys" class="paragraph-1 paragraph-gray">Yrityksesi</label><input type="text" class="text-field-2 w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="" id="yritys"></div>
-                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa39b-1e037d70" class="grid-cell"><label for="palaute" class="paragraph-1 paragraph-gray">Vapaamuotoinen palaute</label><input type="text" class="text-field-2 w-input" maxlength="256" name="palaute" data-name="palaute" placeholder="" id="palaute"></div>
-                <div id="w-node-_46f47872-3b81-009b-cd21-4d04d66dd5b6-1e037d70" class="grid-cell"><label class="w-checkbox check-box feedback"><input type="checkbox" id="suostumus" name="suostumus" data-name="suostumus" class="w-checkbox-input checkbox feedback"><span class="paragraph-1 paragraph-gray w-form-label" for="suostumus">Palautettani saa käyttää markkinointiin.</span></label></div>
+                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa393-ded60735" class="grid-cell"><label for="yritys" class="paragraph-1 paragraph-gray">Yrityksesi</label><input class="text-field-2 w-input" maxlength="256" name="yritys" data-name="yritys" placeholder="" type="text" id="yritys"></div>
+                <div id="w-node-_1d875b11-be0a-beb5-a8c7-4ca84eaaa39b-ded60735" class="grid-cell"><label for="palaute" class="paragraph-1 paragraph-gray">Vapaamuotoinen palaute</label><input class="text-field-2 w-input" maxlength="256" name="palaute" data-name="palaute" placeholder="" type="text" id="palaute"></div>
+                <div id="w-node-_46f47872-3b81-009b-cd21-4d04d66dd5b6-ded60735" class="grid-cell"><label class="w-checkbox check-box feedback"><input id="suostumus" type="checkbox" name="suostumus" data-name="suostumus" class="w-checkbox-input checkbox feedback"><span class="paragraph-1 paragraph-gray w-form-label" for="suostumus">Palautettani saa käyttää markkinointiin.</span></label></div>
               </div>
-              <div class="button-wrapper"><input type="submit" value="Anna palaute" data-wait="Odoita hetki..." class="button feedback w-button">
+              <div class="button-wrapper"><input type="submit" data-wait="Odoita hetki..." class="button feedback w-button" value="Anna palaute">
                 <div class="security-field no-margin">
                   <div class="security-icon w-embed"><svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                       <path d="m22.814 9.216-.826-5.368A1 1 0 0 0 21 3C15.533 3 12.731.316 12.707.293a1 1 0 0 0-1.41 0C11.269.316 8.467 3 3 3a1 1 0 0 0-.988.848l-.826 5.368A12.033 12.033 0 0 0 7.3 21.576l4.22 2.3a1 1 0 0 0 .958 0l4.22-2.3a12.033 12.033 0 0 0 6.116-12.36Zm-7.072 10.6L12 21.861 8.258 19.82a10.029 10.029 0 0 1-5.1-10.3l.7-4.541A14.717 14.717 0 0 0 12 2.3a14.717 14.717 0 0 0 8.139 2.68l.7 4.54a10.029 10.029 0 0 1-5.097 10.3Z" fill="#000000" class="fill-232323"></path>
