--- a/401.html
+++ b/401.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3a96ac037ccb" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="65a683dc387d6f72ded60664" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Kofo - Webflow Ecommerce website template</title>
@@ -26,9 +26,9 @@
       <a href="#" class="w-inline-block"><img src="images/logo.png" loading="lazy" width="80" height="" alt=""></a>
     </div>
     <div class="utility-page-content w-password-page w-form">
-      <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="utility-page-form w-password-page" data-wf-page-id="63949a6eea7b3a96ac037ccb" data-wf-element-id="5e1c84ec4eb3edec2d1f804500000000000c">
+      <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="utility-page-form w-password-page" data-wf-page-id="65a683dc387d6f72ded60664" data-wf-element-id="5e1c84ec4eb3edec2d1f804500000000000c">
         <h1 class="display-2">Protected Page</h1>
-        <div class="margin-15px"><input type="password" class="text-field w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="field"></div><input type="submit" value="Submit" data-wait="Please wait..." class="button large w-password-page w-button">
+        <div class="margin-15px"><input class="text-field w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" type="password" id="field"></div><input type="submit" data-wait="Please wait..." class="button large w-password-page w-button" value="Submit">
         <div class="error-message w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
