--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6061f" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -544,15 +544,15 @@
         </div>
         <div class="margin-70px">
           <div class="w-layout-grid client-grid">
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-ded6061f" class="client-card">
-              <a href="referenssi/hautaustoimisto-rauha-oy" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
+              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">11/2023</a>
+                  <a href="#" class="category-tag">10/2023</a>
                 </div>
-                <a href="referenssi/hautaustoimisto-rauha-oy" class="client-title">Hautaustoimisto Rauha Oy</a>
+                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
                 <div class="margin-20px">
-                  <a href="referenssi/hautaustoimisto-rauha-oy" class="button-line w-inline-block">
+                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
@@ -563,15 +563,15 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-ded6061f" class="client-card">
-              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-ded6061f" class="client-card">
+              <a href="referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-valaistusmk-p-500.webp 500w, images/mockup-valaistusmk-p-800.webp 800w, images/mockup-valaistusmk-p-1080.webp 1080w, images/mockup-valaistusmk-p-1600.webp 1600w, images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">10/2023</a>
+                  <a href="#" class="category-tag">09/2023</a>
                 </div>
-                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
+                <a href="referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
                 <div class="margin-20px">
-                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                  <a href="referenssi/valaistus-mk-oy" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
@@ -652,8 +652,7 @@
               </div>
             </div>
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c49c6-f17c497c" data-w-id="063a8163-44a6-b9f6-d883-e512f17c49c6" class="copyright-flex legal">
-              <p class="paragraph _2">© Nords Oy 2023<a href="https://webflow.com/" target="_blank"></a>
-              </p>
+              <p class="paragraph _2">© Nords Oy 2024</p>
               <div class="legal">
                 <a href="palveluehdot" class="footer-link bigger">Palveluehdot</a>
                 <div class="footer-link bigger hide-mobile">|</div>
