--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jan 16 2024 13:51:01 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Mar 18 2024 07:36:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a683dc387d6f72ded6074d" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -127,8 +127,8 @@
         <div class="container">
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-ded6074d" class="client-card">
-                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+              <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-ded6074d" class="client-card hide">
+                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 0px, 100vw" srcset="images/mockup-rauhanhautaus-p-500.webp 500w, images/mockup-rauhanhautaus-p-800.webp 800w, images/mockup-rauhanhautaus-p-1080.webp 1080w, images/mockup-rauhanhautaus-p-1600.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">11/2023</a>
@@ -370,7 +370,7 @@
               </div>
             </div>
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c49c6-f17c497c" data-w-id="063a8163-44a6-b9f6-d883-e512f17c49c6" class="copyright-flex legal">
-              <p class="paragraph _2">© Nords Oy 2023</p>
+              <p class="paragraph _2">© Nords Oy 2024</p>
               <div class="legal">
                 <a href="palveluehdot" class="footer-link bigger">Palveluehdot</a>
                 <div class="footer-link bigger hide-mobile">|</div>
